move powedb out of react bundle

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		// window.host="http://localhost:3000/";
 		window.host="/";
 	</script>
+	<script src="powerdb.js"></script>
 </head>
 <body>
 	<div id="root"></div>
